Avanzo en nuevo diseno propuesto por jairo

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,12 @@
+@font-face {
+  font-family: 'Trebuchet';
+  src: url('trebuchet-font/trebuc.ttf') format('opentype');
+}
+
+body {
+  font-family: 'Trebuchet', sans-serif !important;
+}
+
 .float {
   position: fixed;
   width: 60px;
@@ -13,6 +22,61 @@
   z-index: 100;
 }
 
-.my-float{
-	margin-top:16px;
+.my-float {
+  margin-top: 16px;
+}
+
+
+/* ACCORDION */
+
+
+/* Style the buttons that are used to open and close the accordion panel */
+.accordion {
+  background-color: #eee;
+  color: #444;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  text-align: left;
+  border: none;
+  outline: none;
+  transition: 0.4s;
+}
+
+/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+.active,
+.accordion:hover {
+  background-color: #ccc;
+}
+
+/* Style the accordion panel. Note: hidden by default */
+.panel {
+  padding: 0 18px;
+  background-color: white;
+  display: none;
+  overflow: hidden;
+}
+
+/* SWIPER */
+
+
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
